fix UI on iOS

--- a/game/4digit/main.css
+++ b/game/4digit/main.css
@@ -23,7 +23,7 @@ body {
 }
 
 #text-input {
-  width: 80%;
+  width: 75%;
   padding: 8px;
 }
 
